<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".Page2Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/page2Img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="84dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/github"
            tools:src="@drawable/github" />

        <TextView
            android:id="@+id/Page2title"
            style="@style/titlePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/page_2_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page2Img" />

        <TextView
            android:id="@+id/page2Body"
            android:layout_width="359dp"
            android:layout_height="71dp"
            android:layout_marginTop="48dp"
            android:text="@string/page_2_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Page2title" />

        <Button
            android:id="@+id/page2Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            app:layout_constraintBottom_toBottomOf="@+id/page2Home"
            app:layout_constraintEnd_toStartOf="@+id/page2Home"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/page2Home" />

        <Button
            android:id="@+id/page2Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            app:layout_constraintBottom_toBottomOf="@+id/page2Home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/page2Home"
            app:layout_constraintTop_toTopOf="@+id/page2Home" />

        <Button
            android:id="@+id/page2Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/btn_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/page2Next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/page2Back"
            app:layout_constraintTop_toBottomOf="@+id/page2Body" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>