<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page1Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/page1Img"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginTop="84dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/git"
            tools:src="@drawable/git" />

        <TextView
            android:id="@+id/Page1title"
            style="@style/titlePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/page_1_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page1Img" />

        <TextView
            android:id="@+id/page1Body"
            android:layout_width="359dp"
            android:layout_height="77dp"
            android:layout_marginTop="80dp"
            android:text="@string/page_1_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Page1title" />

        <Button
            android:id="@+id/page1Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            app:layout_constraintBottom_toBottomOf="@+id/page1Home"
            app:layout_constraintEnd_toStartOf="@+id/page1Home"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/page1Home" />

        <Button
            android:id="@+id/page1Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            app:layout_constraintBottom_toBottomOf="@+id/page1Home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/page1Home"
            app:layout_constraintTop_toTopOf="@+id/page1Home" />

        <Button
            android:id="@+id/page1Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/btn_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/page1Next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/page1Back"
            app:layout_constraintTop_toBottomOf="@+id/page1Body" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>