<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Page3Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/page3Img"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="84dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/clean_code"
            tools:src="@drawable/clean_code" />

        <TextView
            android:id="@+id/Page3title"
            style="@style/titlePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/page_3_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page3Img" />

        <TextView
            android:id="@+id/page3Body"
            android:layout_width="359dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:layout_marginTop="80dp"
            android:text="@string/page_3_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Page3title" />

        <Button
            android:id="@+id/page3Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            app:layout_constraintBottom_toBottomOf="@+id/page3Home"
            app:layout_constraintEnd_toStartOf="@+id/page3Home"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/page3Home" />

        <Button
            android:id="@+id/page3Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            app:layout_constraintBottom_toBottomOf="@+id/page3Home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/page3Home"
            app:layout_constraintTop_toTopOf="@+id/page3Home" />

        <Button
            android:id="@+id/page3Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/btn_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/page3Next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/page3Back"
            app:layout_constraintTop_toBottomOf="@+id/page3Body" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>